0.4.1
    Remove INI configuration file (use db table instead)

0.4.0
    API
      - Update to latest Entitlement APIs
      - Overdue is now at the account level
    DAO
      - Add bundle_id to all invoice item tables
      - Add latest unpaid invoice information in analytics_accounts table
      - Initial implementation of currency conversion
    Reporting
      - Add csv export endpoint for reports data
    Internals
      - Remove lock and use a notification queue instead
      - Update to killbill-oss-parent 0.4.2

0.3.6
    Update to killbill-oss-parent 0.3.11

0.3.5
    Update to killbill-oss-parent 0.3.8

0.3.4
    Update to killbill-oss-parent 0.3.6

0.3.3
    Update to killbill-api 0.3.2

0.3.2
    Initial import from https://github.com/killbill/killbill