@@ -39,19 +39,29 @@
             for (var jdx in dataForAllReports[idx]) {
               // Reports position starts at 1
               var position = parseInt(idx) + 1;
-              buildDataTable(reports[position][jdx], dataForAllReports[idx][jdx], from, to, smoothFunctions[position], parseInt(idx) + parseInt(jdx));
+              buildDataTable(dataForAllReports[idx][jdx], from, to, parseInt(idx) + parseInt(jdx));
+            }
+          }
+
+          var linksWrapper = $('<div><h3>Download links</h3></div>');
+          var links = $('<ul></ul>');
+          linksWrapper.append(links);
+          $('#dataWrapper').append(linksWrapper);
+          for (var position in reports) {
+            for (var idx in reports[position]) {
+              var csvURL = "http://" + $VAR_SERVER + ":" + $VAR_PORT + "/plugins/killbill-analytics/reports?format=csv&startDate=" + from + "&endDate=" + to + "&name=" + reports[position][idx];
+              var smoothFunction = smoothFunctions[position];
+              if (smoothFunction) {
+                csvURL = csvURL + "&smooth=" + smoothFunction;
+              }
+
+              links.append('<li>' + reports[position][idx] + ' <a href="' + csvURL + '">csv</a></li>');
             }
           }
         }
 
-        function buildDataTable(reportName, data, from, to, smoothFunction, id) {
-          var csvURL = "http://" + $VAR_SERVER + ":" + $VAR_PORT + "/plugins/killbill-analytics/reports?format=csv&startDate=" + from + "&endDate=" + to + "&name=" + reportName;
-console.log(smoothFunction);
-          if (smoothFunction) {
-            csvURL = csvURL + "&smooth=" + smoothFunction;
-          }
-
-          var dataTableWrapper = $('<div class="dataTableWrapper" id="dataTableWrapper-' + id + '"><h3>' + data['name'] + ' (<a href="' + csvURL + '">csv</a>)</h3></div>');
+        function buildDataTable(data, from, to, id) {
+          var dataTableWrapper = $('<div class="dataTableWrapper" id="dataTableWrapper-' + id + '"><h3>' + data['name'] + '</h3></div>');
           $('#dataWrapper').append(dataTableWrapper);
 
           var dataTable = $('<table cellpadding="0" cellspacing="0" border="0" class="display" id="dataTable-' + id + '"></table>');
