@@ -1,0 +1,51 @@
+/*
+ * Copyright 2010-2013 Ning, Inc.
+ *
+ * Ning licenses this file to you under the Apache License, version 2.0
+ * (the "License"); you may not use this file except in compliance with the
+ * License.  You may obtain a copy of the License at:
+ *
+ *    http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+ * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  See the
+ * License for the specific language governing permissions and limitations
+ * under the License.
+ */
+
+package com.ning.billing.osgi.bundles.analytics.reports;
+
+import org.testng.Assert;
+import org.testng.annotations.Test;
+
+import com.ning.billing.osgi.bundles.analytics.AnalyticsTestSuiteNoDB;
+
+public class TestReportSpecification extends AnalyticsTestSuiteNoDB {
+
+    @Test(groups = "fast")
+    public void testParserInclusions() throws Exception {
+        final String rawReportName = "payments_per_day|currency=AUD|currency=EUR";
+        final ReportSpecification reportSpecification = new ReportSpecification(rawReportName);
+        Assert.assertEquals(reportSpecification.getReportName(), "payments_per_day");
+
+        Assert.assertFalse(reportSpecification.isFiltered("currency", "AUD"));
+        Assert.assertFalse(reportSpecification.isFiltered("currency", "EUR"));
+        Assert.assertTrue(reportSpecification.isFiltered("currency", "FOO"));
+
+        Assert.assertFalse(reportSpecification.isFiltered("pivot", "AUD"));
+    }
+
+    @Test(groups = "fast")
+    public void testParserExclusions() throws Exception {
+        final String rawReportName = "payments_per_day|currency!=AUD|currency!=EUR";
+        final ReportSpecification reportSpecification = new ReportSpecification(rawReportName);
+        Assert.assertEquals(reportSpecification.getReportName(), "payments_per_day");
+
+        Assert.assertTrue(reportSpecification.isFiltered("currency", "AUD"));
+        Assert.assertTrue(reportSpecification.isFiltered("currency", "EUR"));
+        Assert.assertFalse(reportSpecification.isFiltered("currency", "FOO"));
+
+        Assert.assertFalse(reportSpecification.isFiltered("pivot", "AUD"));
+    }
+}
